@@ -1,7 +1,10 @@
 Unreleased:
 xxxxxxxxxx
+    * Breaking changes:
+	  - ClientBuilder::new takes a parsed BareJid instead of string (#72)
     * Improvements:
       - Agent is now Send, by replacing Rc with Arc and RefCell with RwLock (#64)
+	  - ClientBuilder now has a set_resource method for manual resource management (#72)
 
 Version 0.4.0:
 2023-05-18 [ Maxime “pep” Buquet <pep@bouah.net>, Emmanuel Gil Peyrot <linkmauve@linkmauve.fr> ]
